<resources>
    <string name="app_name">EcsFloralies</string>
    <string name="file_exsists_alert">L\'image %1$s existe déjà. Voulez vous la remplacer?</string>
    <string name="file_exsists_alert_full">"L\'image %s existe déjà.\n - Batiment: %s\n - Etage: %s\n - Appartement: %s\n - %s: %s\n\n Voulez vous la remplacer?"</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>

    <string name="capture_button_alt">Capture</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="saved_flash_mode">flash_mode</string>
    <string name="saved_uri">saved_uri</string>

    <string name="account_email">[%s]</string>
    <string name="photo_with_camera">Photo avec telephone</string>
    <string name="photo_with_endoscope">Photo avec endoscope</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="building_label">Batiment</string>
    <string name="stage_label">Etage</string>
    <string name="apartment_label">Appartement</string>
    <string name="device_label">Equipement</string>
    <string name="save_photo_label">Sauver la photo</string>
    <string name="photo_label">Photo</string>
    <string name="ecs_kitchen">ECS Cuisine</string>
    <string name="ecs_wc">ECS WC</string>
    <string name="ecs_bathroom">ECS SDB</string>
    <string name="ecs_cupboard">ECS placard</string>
    <string name="vmc_kitchen">VMC cuisine</string>
    <string name="vmc_wc">VMC WC</string>
    <string name="vmc_bathroom">VMC salle bain</string>
    <string name="vmc_other_bathroom">VMC deuxième salle bain</string>
    <string name="vmc_exhaust">Bouche VMC</string>
    <string name="ecs_counter">Compteur</string>
</resources>