<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.bdomperso.ecsfloralies.datamodel.DataModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcUri="@{viewmodel.imageUri}"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scaleType="centerInside"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/building_label"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/buildingsList"
                    android:layout_width="170dp"
                    android:layout_height="?attr/dropdownListPreferredItemHeight"
                    app:entries="@{viewmodel.buildings}"
                    app:onItemSelected="@{(newValue) -> viewmodel.setSelectedBuilding(newValue)}"
                    android:background="@drawable/spinner_bg"
                    android:dropDownWidth="200dp"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:paddingRight="14dp"
                    android:popupBackground="@android:color/white"
                    android:popupElevation="3dp"
                    android:stateListAnimator="@drawable/spinner_sla"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/stage_label"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/stagesList"
                    android:layout_width="170dp"
                    android:layout_height="?attr/dropdownListPreferredItemHeight"
                    app:entries="@{viewmodel.filteredStages}"
                    app:onItemSelected="@{(newValue) -> viewmodel.setSelectedStage(newValue)}"
                    android:background="@drawable/spinner_bg"
                    android:dropDownWidth="200dp"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:paddingRight="14dp"
                    android:popupBackground="@android:color/white"
                    android:popupElevation="3dp"
                    android:stateListAnimator="@drawable/spinner_sla"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/apartment_label"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/apartmentsList"
                    android:layout_width="170dp"
                    android:layout_height="?attr/dropdownListPreferredItemHeight"
                    app:entries="@{viewmodel.filteredApartments}"
                    app:onItemSelected="@{(newValue) -> viewmodel.setSelectedApartment(newValue)}"
                    android:background="@drawable/spinner_bg"
                    android:dropDownWidth="200dp"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:paddingRight="14dp"
                    android:popupBackground="@android:color/white"
                    android:popupElevation="3dp"
                    android:stateListAnimator="@drawable/spinner_sla"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/device_label"
                    android:textSize="20sp" />

                <Spinner
                    android:layout_width="170dp"
                    android:layout_height="?attr/dropdownListPreferredItemHeight"
                    app:devicesEntries="@{viewmodel.filteredDevices}"
                    app:onSelectedPosition="@{(newValue) -> viewmodel.setSelectedDeviceIndex(newValue)}"
                    android:background="@drawable/spinner_bg"
                    android:dropDownWidth="200dp"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:paddingRight="14dp"
                    android:popupBackground="@android:color/white"
                    android:popupElevation="3dp"
                    android:stateListAnimator="@drawable/spinner_sla"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/photo_label"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@{viewmodel.filename}"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <Button
                android:id="@+id/saveImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save_photo_label"
                android:padding="5dp"/>

        </LinearLayout>
    </ScrollView>

</layout>